--- a/Hello_World.ipynb
+++ b/Hello_World.ipynb
@@ -5,8 +5,9 @@
     "colab": {
       "name": "Hello World",
       "provenance": [],
+      "collapsed_sections": [],
       "mount_file_id": "1JcH5GLIvODFGf6eUV4Wl0F61K4UGYp1s",
-      "authorship_tag": "ABX9TyNsPvWxEs8O+TINycASCHd3",
+      "authorship_tag": "ABX9TyPqiAi0SKovil5p2wo508N/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -225,13 +226,291 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "a=10\n",
+        "b=11.0\n",
+        "c='Dados'"
       ],
       "metadata": {
         "id": "suBrEd2y9ttR"
       },
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a+b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0jsD1n2JBT64",
+        "outputId": "5be37f8a-c7ee-44fb-d083-38936f183f1c"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "21.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a/b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "61inGyIXBWEh",
+        "outputId": "9cf66e3c-a17c-4260-b815-d197f9975c04"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9090909090909091"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "P=100\n",
+        "i=0.10\n",
+        "n=2\n"
+      ],
+      "metadata": {
+        "id": "9eYj38kVBZRW"
+      },
+      "execution_count": 54,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c=P*(1+i)**n\n",
+        "c"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ezl571yGBq9N",
+        "outputId": "2e808a37-8932-47fd-a1c6-8b0147281a49"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "121.00000000000001"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c-P"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X12VGYzACVDg",
+        "outputId": "778a923c-5451-4757-9341-4e28dfe4bc61"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "21.000000000000014"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 57
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c=round(P*(+1+i)**n,2)\n",
+        "c"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4xo0RhMxClQl",
+        "outputId": "8219f758-5ab6-4e3d-da02-7f6fb488128e"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "121.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ab=[0,2,3,5]\n",
+        "ab"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q9_Cl0bOC-Iz",
+        "outputId": "d2401d79-9360-427a-eeec-8658719b070d"
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 2, 3, 5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 61
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "max(ab)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5uKCM2PcDEWM",
+        "outputId": "302b9721-e7cb-42f6-a5a5-15f6c17d7fcb"
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 62
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "min(ab)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5js8g0TBDHJB",
+        "outputId": "b212dbaf-aae4-42fa-dc9f-e4eedab2a8b8"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "max(ab)-min(ab)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6UEDUBQVDIBQ",
+        "outputId": "2a0521d7-c491-46dd-bced-7ac6db95f6d0"
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum(ab)/len(ab)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FQE9AdtODSK2",
+        "outputId": "300f3147-1484-49b7-a42b-72f24ec7ff32"
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 66
+        }
+      ]
     }
   ]
 }
