--- a/Hello_World.ipynb
+++ b/Hello_World.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1JcH5GLIvODFGf6eUV4Wl0F61K4UGYp1s",
-      "authorship_tag": "ABX9TyPqiAi0SKovil5p2wo508N/",
+      "authorship_tag": "ABX9TyMKCXLqEde9NQg+3/ZZzjy9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,7 +73,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 267
+          "height": 285
         },
         "id": "Qo2OSU8p9KPg",
         "outputId": "213fd252-7256-44d4-fcf4-041b4ef78739"
@@ -509,6 +509,43 @@
           },
           "metadata": {},
           "execution_count": 66
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math as mt"
+      ],
+      "metadata": {
+        "id": "XCId8-ZRD93l"
+      },
+      "execution_count": 68,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mt.log10(1000)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "h5J76JtKEHWA",
+        "outputId": "58d98efd-d35f-473f-c6d2-0e86905be204"
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 69
         }
       ]
     }
