--- a/Aula_1_Hello_World.ipynb
+++ b/Aula_1_Hello_World.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1JcH5GLIvODFGf6eUV4Wl0F61K4UGYp1s",
-      "authorship_tag": "ABX9TyML7Dgg68p+av+9Z0W/a5HZ",
+      "authorship_tag": "ABX9TyMfb/24MuEL8Hacx1HEcUbU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,7 +73,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 285
+          "height": 267
         },
         "id": "Qo2OSU8p9KPg",
         "outputId": "213fd252-7256-44d4-fcf4-041b4ef78739"
@@ -731,13 +731,99 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "nome = 'Raphael'\n",
+        "idade=29\n",
+        "cidade ='São Paulo'\n",
+        "profissao = 'financeiro'"
       ],
       "metadata": {
         "id": "EPzEVAgdHmXw"
       },
-      "execution_count": null,
+      "execution_count": 90,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(nome)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0Z-3a4KGH6sX",
+        "outputId": "13254818-f86d-43d6-9b49-3f7cf0e7d573"
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Raphael\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nome"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "lmUOyFwfH_tO",
+        "outputId": "b7b64b39-01bd-4942-d372-e8052433afa4"
+      },
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Raphael'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 93
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'olá!' + ',meu nome é ' + nome + '. Sou um ' + profissao + '. Tenho '+ str(idade)+' anos e sou natural da cidade de' + cidade + '.' "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "LpCWYxiPIDQS",
+        "outputId": "4429c1bc-4e3d-482a-81f1-ac0678c2a8ce"
+      },
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'olá!,meu nome é Raphael. Sou um financeiro. Tenho 29 anos e sou natural da cidade deSão Paulo.'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 102
+        }
+      ]
     }
   ]
 }
